--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -134,25 +134,25 @@ jobs:
           path: package/dist/
           retention-days: 7
 
-      # - name: Install package and create wheelhouse
-      #   run: |
-      #     cd package
-      #     python -m pip install .[package]
-      #     python -m pip install importlib-metadata
-      #     python -m pip wheel .[package] -w wheelhouse
+      - name: Install package and create wheelhouse
+        run: |
+          cd package
+          python -m pip install .[package]
+          python -m pip install importlib-metadata
+          python -m pip wheel .[package] -w wheelhouse
 
-      # - name: "Compress the wheelhouse"
-      #   uses: vimtor/action-zip@v1.1
-      #   with:
-      #     files: package/wheelhouse
-      #     dest: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-ubuntu-latest-${{ matrix.python-version }}.zip
+      - name: "Compress the wheelhouse"
+        uses: vimtor/action-zip@v1.1
+        with:
+          files: package/wheelhouse
+          dest: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-ubuntu-latest-${{ matrix.python-version }}.zip
 
-      # - name: "Upload the compressed wheelhouse"
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-ubuntu-latest-${{ matrix.python-version }}
-      #     path: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-ubuntu-latest-${{ matrix.python-version }}.zip
-      #     retention-days: 7
+      - name: "Upload the wheelhouse files"
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-ubuntu-latest-${{ matrix.python-version }}
+          path: package/wheelhouse/*
+          retention-days: 7
 
       - name: Create Sphinx documentation
         run: |
