--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -49,85 +49,85 @@ jobs:
           vale-config: doc/.vale.ini
           token: ${{ secrets.GITHUB_TOKEN }}
 
-  gen-stubs:
-    name: Generate Mechanical stubs
-    needs: [style, doc-style]
-    runs-on: ${{ matrix.os }}
-    container:
-      image: ghcr.io/ansys/mechanical:${{ matrix.versions.image }}
-      options: --entrypoint /bin/bash
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        versions: [
-          { image: '23.2.0', version: '232' },
-          { image: '24.1.0', version: '241' }
-        ]
-        python-version: ['3.10']
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+  # gen-stubs:
+  #   name: Generate Mechanical stubs
+  #   needs: [style, doc-style]
+  #   runs-on: ${{ matrix.os }}
+  #   container:
+  #     image: ghcr.io/ansys/mechanical:${{ matrix.versions.image }}
+  #     options: --entrypoint /bin/bash
+  #   strategy:
+  #     matrix:
+  #       os: [ubuntu-latest]
+  #       versions: [
+  #         { image: '23.2.0', version: '232' },
+  #         { image: '24.1.0', version: '241' }
+  #       ]
+  #       python-version: ['3.10']
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v4
 
-      - name: Install dependencies
-        env:
-          AWP_ROOTDV_DEV: /install/ansys_inc/v${{ matrix.versions.version }}
-          ANSYSCL${{ matrix.versions.version }}_DIR: /install/ansys_inc/v${{ matrix.versions.version }}/licensingclient
-        run: |
-          apt update
-          apt install --reinstall ca-certificates
-          apt install software-properties-common -y
-          add-apt-repository ppa:deadsnakes/ppa -y
-          apt install python${{ matrix.python-version }} -y
-          ln -s /usr/bin/python${{ matrix.python-version }} /usr/bin/python
-          apt install python${{ matrix.python-version }}-venv -y
-          apt install -y lsb-release mono-complete make git zip
+  #     - name: Install dependencies
+  #       env:
+  #         AWP_ROOTDV_DEV: /install/ansys_inc/v${{ matrix.versions.version }}
+  #         ANSYSCL${{ matrix.versions.version }}_DIR: /install/ansys_inc/v${{ matrix.versions.version }}/licensingclient
+  #       run: |
+  #         apt update
+  #         apt install --reinstall ca-certificates
+  #         apt install software-properties-common -y
+  #         add-apt-repository ppa:deadsnakes/ppa -y
+  #         apt install python${{ matrix.python-version }} -y
+  #         ln -s /usr/bin/python${{ matrix.python-version }} /usr/bin/python
+  #         apt install python${{ matrix.python-version }}-venv -y
+  #         apt install -y lsb-release mono-complete make git zip
 
-          python -m ensurepip --default-pip
-          pip install --upgrade pip
-          python --version
-          pip --version
+  #         python -m ensurepip --default-pip
+  #         pip install --upgrade pip
+  #         python --version
+  #         pip --version
 
-          mkdir -p src/ansys/mechanical/stubs
-          touch src/ansys/mechanical/stubs/__init__.py
-          pwd
-          ls -l
-          pip install -e .[doc]
-          pip install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org pip setuptools
-          pip install --upgrade pip flit pytz tzdata ansys-pythonnet
+  #         mkdir -p src/ansys/mechanical/stubs
+  #         touch src/ansys/mechanical/stubs/__init__.py
+  #         pwd
+  #         ls -l
+  #         pip install -e .[doc]
+  #         pip install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org pip setuptools
+  #         pip install --upgrade pip flit pytz tzdata ansys-pythonnet
 
-      - name: Generate the mechanical stub files
-        env:
-          AWP_ROOTDV_DEV: /install/ansys_inc/v${{ matrix.versions.version }}
-          ANSYSCL${{ matrix.versions.version }}_DIR: /install/ansys_inc/v${{ matrix.versions.version }}/licensingclient
-        run: |
-          python stub_generator/create_files.py > results.txt
-        continue-on-error: True
+  #     - name: Generate the mechanical stub files
+  #       env:
+  #         AWP_ROOTDV_DEV: /install/ansys_inc/v${{ matrix.versions.version }}
+  #         ANSYSCL${{ matrix.versions.version }}_DIR: /install/ansys_inc/v${{ matrix.versions.version }}/licensingclient
+  #       run: |
+  #         python stub_generator/create_files.py > results.txt
+  #       continue-on-error: True
 
-      - name: Check stubs were generated
-        run: |
-          cat results.txt
+  #     - name: Check stubs were generated
+  #       run: |
+  #         cat results.txt
 
-          # Check if failure occurred
-          output=$(grep -c "Done processing all mechanical stubs" results.txt)
-          if [ $output -eq 1 ]; then
-            echo "All mechanical stubs were created"
-            exit 0
-          else
-            echo "There was an issue creating the mechanical stubs"
-            exit 1
-          fi
+  #         # Check if failure occurred
+  #         output=$(grep -c "Done processing all mechanical stubs" results.txt)
+  #         if [ $output -eq 1 ]; then
+  #           echo "All mechanical stubs were created"
+  #           exit 0
+  #         else
+  #           echo "There was an issue creating the mechanical stubs"
+  #           exit 1
+  #         fi
 
-      - name: Upload v${{ matrix.versions.version }} stubs
-        uses: actions/upload-artifact@v4
-        if: matrix.python-version == env.MAIN_PYTHON_VERSION
-        with:
-          name: v${{ matrix.versions.version }}
-          path: src/ansys/mechanical/stubs/v${{ matrix.versions.version }}
-          retention-days: 7
+  #     - name: Upload v${{ matrix.versions.version }} stubs
+  #       uses: actions/upload-artifact@v4
+  #       if: matrix.python-version == env.MAIN_PYTHON_VERSION
+  #       with:
+  #         name: v${{ matrix.versions.version }}
+  #         path: src/ansys/mechanical/stubs/v${{ matrix.versions.version }}
+  #         retention-days: 7
 
   doc-build:
     name: Make html and markdown documentation
-    needs: [gen-stubs]
+    # needs: [gen-stubs]
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -136,10 +136,15 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: "Download the library artifacts from build-library step"
-      uses: actions/download-artifact@v4
-      with:
-        path: src/ansys/mechanical/stubs/
+    - name:
+      run: |
+        mkdir -p src/ansys/mechanical/stubs/v232
+        mkdir -p src/ansys/mechanical/stubs/v241
+
+    # - name: "Download the library artifacts from build-library step"
+    #   uses: actions/download-artifact@v4
+    #   with:
+    #     path: src/ansys/mechanical/stubs/
 
     - name: List files
       run: ls -R
@@ -154,13 +159,11 @@ jobs:
         with open("src/ansys/mechanical/stubs/__init__.py", "w") as f:
             f.write('''try:
             import importlib.metadata as importlib_metadata
-          except ModuleNotFoundError:  # pragma: no cover
-              import importlib_metadata  # type: ignore
+        except ModuleNotFoundError:  # pragma: no cover
+            import importlib_metadata  # type: ignore
 
-          __version__ = importlib_metadata.version("ansys-mechanical-stubs")
-          """Patch version for the ansys-mechanical-stubs package."""
-
-            ''')
+        __version__ = importlib_metadata.version("ansys-mechanical-stubs")
+        """Patch version for the ansys-mechanical-stubs package."""\n''')
 
             for folder in subfolders:
                 f.write(f"from .{folder} import *\n")
@@ -168,53 +171,53 @@ jobs:
     - name: Display init file
       run: cat src/ansys/mechanical/stubs/__init__.py
 
-    - name: Generate html and markdown documentation
-      run: |
-        make -C doc html
-        sphinx-build -M markdown doc/source doc/_build
+    # - name: Generate html and markdown documentation
+    #   run: |
+    #     make -C doc html
+    #     sphinx-build -M markdown doc/source doc/_build
 
-    - name: Clean ID in first row
-      run: |
-        python scripts/01-clean-id.py
+    # - name: Clean ID in first row
+    #   run: |
+    #     python scripts/01-clean-id.py
 
-    - name: Clean empty rows
-      run: |
-        python scripts/02-clean-empty-row.py
+    # - name: Clean empty rows
+    #   run: |
+    #     python scripts/02-clean-empty-row.py
 
-    - name: Create table of contents
-      run: |
-        python scripts/03-create-toc-from-html-mechanical.py
+    # - name: Create table of contents
+    #   run: |
+    #     python scripts/03-create-toc-from-html-mechanical.py
 
-    - name: Add header to tables
-      run: |
-        python scripts/04-add-header-to-tables.py
+    # - name: Add header to tables
+    #   run: |
+    #     python scripts/04-add-header-to-tables.py
 
-    - name: Remove links in heading
-      run: |
-        python scripts/05-remove-link-in-heading.py
+    # - name: Remove links in heading
+    #   run: |
+    #     python scripts/05-remove-link-in-heading.py
 
-    - name: Upload to GitHub Artifacts
-      if: matrix.python-version == env.MAIN_PYTHON_VERSION
-      uses: actions/upload-artifact@v4
-      with:
-        name: toc-file
-        path: output/
+    # - name: Upload to GitHub Artifacts
+    #   if: matrix.python-version == env.MAIN_PYTHON_VERSION
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #     name: toc-file
+    #     path: output/
 
-    - name: Upload markdown documentation
-      uses: actions/upload-artifact@v3
-      if: matrix.python-version == env.MAIN_PYTHON_VERSION
-      with:
-        name: documentation-md
-        path: doc/_build/markdown
-        retention-days: 7
+    # - name: Upload markdown documentation
+    #   uses: actions/upload-artifact@v3
+    #   if: matrix.python-version == env.MAIN_PYTHON_VERSION
+    #   with:
+    #     name: documentation-md
+    #     path: doc/_build/markdown
+    #     retention-days: 7
 
-    - name: Upload Sphinx HTML documentation
-      uses: actions/upload-artifact@v3
-      if: matrix.python-version == env.MAIN_PYTHON_VERSION
-      with:
-        name: documentation-html
-        path: doc/_build/html
-        retention-days: 7
+    # - name: Upload Sphinx HTML documentation
+    #   uses: actions/upload-artifact@v3
+    #   if: matrix.python-version == env.MAIN_PYTHON_VERSION
+    #   with:
+    #     name: documentation-html
+    #     path: doc/_build/html
+    #     retention-days: 7
 
   # release-pypi-private:
   #   name: "Release to the private PyPI repository"
